src/test/deca/context/valid/Objet/test_extends2.deca
// Description:
//    test de faire redéfinition d'une méthode dans deux classes filles 
//
// Resultats:
//  
//
// Historique:
//    cree le 20/01/2022

class A  {
    int i ;
    int get(int i , float b ){}
    
}

class B extends A {
    int get(int i , float b ){}


}

class C extends A {
    int get(int i , float b ){}
    
}
{}



